# claude-analytics-dashboard

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  security-fixes.patch
.github/workflows/: ci.yml
backend/: .env.example  main.py  pyproject.toml  rate_limit.py
backend/models/: schemas.py
backend/routers/: _deps.py  aggregate.py  analyze.py  chat.py  export.py  filter.py  upload.py
backend/services/: chart_compiler.py  claude_client.py  profiler.py  report_generator.py  semantic_classifier.py  semantic_types.py  session_store.py
backend/tests/: test_analyze.py  test_chat.py  test_semantic_classifier.py  test_session_store.py  test_upload.py
examples/: generate_finance_data.py  generate_hr_data.py  generate_sample_data.py  generate_showcase.py  showcase_data.csv
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ChartGrid.tsx  ChatInterface.tsx  Dashboard.tsx  DomainBadge.tsx  DynamicChartGrid.tsx  ExportButton.tsx  FilterBar.tsx  InsightCards.tsx  InsightsPanel.test.tsx  InsightsPanel.tsx
frontend/src/components/layout/: LandingLayout.tsx
frontend/src/hooks/: useAnalysis.ts  useChat.ts  useFileUpload.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts
